--- a/projects/ecommerce_segmentation/notebooks/01_ecommerce_rfm_kmeans.ipynb
+++ b/projects/ecommerce_segmentation/notebooks/01_ecommerce_rfm_kmeans.ipynb
@@ -224,7 +224,9 @@
    "metadata": {},
    "source": [
     "## 6) Next steps\n",
-    
+    "- Publish key charts to your README.\n",
+    "- Turn this into a dashboard in Tableau/Power BI if desired.\n",
+    "- Write a brief 5–8 bullet summary of business actions for each segment."
    ]
   }
  ],
