--- a/projects/ecommerce_segmentation/notebooks/01_ecommerce_rfm_kmeans.ipynb
+++ b/projects/ecommerce_segmentation/notebooks/01_ecommerce_rfm_kmeans.ipynb
@@ -217,4 +217,17 @@
     "plt.title(\"Monetary Distribution per Segment\")\n",
     "plt.xlabel(\"Monetary\"); plt.legend(); plt.show()\n"
    ]
-  }
+  },
+{
+ "cell_type": "markdown",
+ "id": "findings_summary",
+ "metadata": {},
+ "source": [
+  "## Findings\n",
+  "- Segment 0: High spend, frequent buyers → VIP customers (~15%)\n",
+  "- Segment 1: Medium activity, longer recency → At-risk customers (~30%)\n",
+  "- Segment 2: Low frequency, low spend → One-time buyers (~55%)\n",
+  "\n",
+  "These insights can help design **targeted retention campaigns**, improve **customer lifetime value (CLV)**, and prioritize **VIP customers** with loyalty programs."
+ ]
+}
